--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "dastral"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = """
 Reduce boilerplate code, learn data structures & algorithms
 with Dastral.
 """
-license = "MIT"
+documentation = "https://docs.rs/dastral"
 readme = "README.md"
+repository = "https://github.com/MartinGHaas/dastral"
+license = "MIT"
 keywords = ["data-structures", "algorithms", "rust-patterns"]
 categories = ["data-structures", "algorithms", "rust-patterns"]
 
